# crm-chat

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
etc/compose/dozzle/data/: users.yml
etc/compose/dozzle/data/admin/: profile.json
etc/compose/nginx/: Dockerfile  default.conf  nginx.conf
src/: gunicorn.conf.py
src/api/: urls.py
src/api/v1/: authentication.py  permissions.py
src/api/v1/client/: filters.py  serializers.py  swagger_docs.py  urls.py  views.py
src/api/v1/curator/: filters.py  serializers.py  swagger_docs.py  urls.py  views.py
src/api/v1/docs/: swagger_config.py
src/api/v1/lms_crm/: serializers.py  urls.py  utils.py  views.py
src/apps/chat/: admin.py  models.py  utils.py
src/apps/chat/management/commands/: test_create_chat.py
src/apps/chat/migrations/: 0001_initial.py  0002_alter_chat_status.py  0003_chat_closed_at.py  0004_remove_chat_closed_at_remove_chat_curator_note_and_more.py
src/apps/users/: admin.py  models.py  utils.py
src/apps/users/migrations/: 0001_initial.py  0002_user_name.py  0003_alter_user_name.py
src/core/: urls.py
src/core/generics/: models.py
src/core/libs/keycloak/: __init__.py
src/core/settings/: __init__.py  base.py  development.py
src/ws/: auth.py  consumers.py  docs.md  routing.py  serializers.py  utils.py
